Cleaned ots-base from warnings and infos.